src/test/deca/context/invalid/langage_sans_objet/troisieme_passe/regle_3_28_1.deca
// Description:
//    regle 3.28 condition assign compatible
//
// Resultats:
//    Ligne 7: type 'float' must be compatible with type 'int'.
{
    int a = 1.0;
}
// raison : condition assign compatible
// message : type 'float' must be compatible with type 'int'